--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/rte": "^5.10.5",
     "@popperjs/core": "^2.11.8",
+    "@types/react-router-dom": "^5.3.3",
     "bootstrap": "^5.3.8",
+    "firebase": "^12.6.0",
     "framer-motion": "^11.5.4",
     "lucide-react": "^0.454.0",
+    "next": "^16.0.4",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-beautiful-dnd": "^13.1.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
